--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~14.2.7",
     "@angular/router": "~14.2.7",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@ngrx/store": "^15.4.0",
     "@popperjs/core": "^2.11.6",
     "@swimlane/ngx-datatable": "^20.0.0",
     "angular-datatables": "^13.1.0",
