--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.2.7",
+    "@angular/animations": "~15.2.4",
     "@angular/cdk": "^13.3.9",
-    "@angular/common": "~14.2.7",
-    "@angular/compiler": "~14.2.7",
-    "@angular/core": "~14.2.7",
-    "@angular/forms": "~14.2.7",
+    "@angular/common": "~15.2.4",
+    "@angular/compiler": "~15.2.4",
+    "@angular/core": "~15.2.4",
+    "@angular/forms": "~15.2.4",
     "@angular/material": "^13.3.9",
-    "@angular/platform-browser": "~14.2.7",
-    "@angular/platform-browser-dynamic": "~14.2.7",
-    "@angular/router": "~14.2.7",
+    "@angular/platform-browser": "~15.2.4",
+    "@angular/platform-browser-dynamic": "~15.2.4",
+    "@angular/router": "~15.2.4",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@ngrx/effects": "^15.4.0",
     "@ngrx/store": "^15.4.0",
+    "@ngrx/store-devtools": "^15.4.0",
     "@popperjs/core": "^2.11.6",
     "@swimlane/ngx-datatable": "^20.0.0",
     "angular-datatables": "^13.1.0",
@@ -39,9 +41,9 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.2.6",
-    "@angular/cli": "~14.2.6",
-    "@angular/compiler-cli": "~14.2.7",
+    "@angular-devkit/build-angular": "~15.2.4",
+    "@angular/cli": "~15.2.4",
+    "@angular/compiler-cli": "~15.2.4",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
@@ -53,6 +55,6 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.9.5"
   }
 }
