--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@
 /tmp
 /out-tsc
 /bazel-out
-
 # Node
 /node_modules
 npm-debug.log
@@ -40,5 +39,6 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+migrations/
 __pycache__/
 db.sqlite3
