--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "npm run build",
+    "build": "angular-scripts build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
